Fixed unnessary scrollbar

--- a/app/gulp/sass/_statistics.scss
+++ b/app/gulp/sass/_statistics.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  height: calc(100% - 60px);
+  height: calc(100% - 80px);
   width: 100%;
 }
 
